--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  mysql-test:
+  jest-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,8 +21,16 @@ jobs:
 
       - name: Configure MySQL
         run: |
-          sudo mysql -e "CREATE USER '${{ secrets.DB_USER }}'@'localhost' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';"
-          sudo mysql -e "CREATE DATABASE ${{ secrets.DB_NAME }};"
+          # Update MySQL authentication to use password
+          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_ROOT_PASSWORD }}';"
+          
+          # Create Database and User
+          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "CREATE DATABASE ${{ secrets.DB_NAME }};"
+          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "CREATE USER '${{ secrets.DB_USER }}'@'localhost' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';"
+          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'localhost';"
+          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "FLUSH PRIVILEGES;"
+          
+          # Restart MySQL
           sudo systemctl restart mysql
 
       - name: Configure Environment Variables
@@ -32,6 +40,7 @@ jobs:
           echo DB_User=${{ secrets.DB_USER }} >> src/.env
           echo DB_Pass=${{ secrets.DB_PASSWORD }} >> src/.env
           echo DB_Name=${{ secrets.DB_NAME }} >> src/.env
+          echo DB_Port=${{ secrets.DB_PORT || '3306' }} >> src/.env  # Default to 3306 if not set
 
       - name: Install Node.js
         uses: actions/setup-node@v3
@@ -41,8 +50,8 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-        working-directory: src  # 👈 Run inside `src/`
+        working-directory: src
 
       - name: Run Tests
         run: npm test
-        working-directory: src  # 👈 Run inside `src/`
+        working-directory: src
