--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -18,6 +18,7 @@ jobs:
           sudo apt install -y mysql-server
           sudo systemctl start mysql
           sudo systemctl enable mysql
+          sudo mysqladmin -u root password "${{ secrets.DB_ROOT_PASSWORD }}"
 
       - name: Configure MySQL
         run: |
