--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -18,21 +18,14 @@ jobs:
           sudo apt install -y mysql-server
           sudo systemctl start mysql
           sudo systemctl enable mysql
-          sudo mysqladmin -u root password "${{ secrets.DB_ROOT_PASSWORD }}"
 
-      - name: Configure MySQL
+      - name: Set up MySQL
         run: |
-          # Update MySQL authentication to use password
-          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_ROOT_PASSWORD }}';"
-          
-          # Create Database and User
-          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "CREATE DATABASE ${{ secrets.DB_NAME }};"
-          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "CREATE USER '${{ secrets.DB_USER }}'@'localhost' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';"
-          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'localhost';"
-          sudo mysql -u root -p${{ secrets.DB_ROOT_PASSWORD }} -e "FLUSH PRIVILEGES;"
-          
-          # Restart MySQL
-          sudo systemctl restart mysql
+          sudo systemctl start mysql
+          sudo mysql -e "CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'localhost' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';"
+          sudo mysql -e "CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};"
+          sudo mysql -e "GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'localhost';"
+          sudo mysql -e "FLUSH PRIVILEGES;"
 
       - name: Configure Environment Variables
         run: |
