--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -39,15 +39,20 @@ jobs:
       - name: Secure MySQL Installation
         run: |
           echo "Securing MySQL..."
-          sudo mysql -u root <<_EOF_
-          ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_ROOT_PASSWORD }}';
+          sudo mysql -u ${{ secrets.DB_USER }} -p"${{ secrets.DB_ROOT_PASSWORD }}" -h 127.0.0.1 <<_EOF_
+          ALTER USER '${{ secrets.DB_USER }}'@'localhost' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_ROOT_PASSWORD }}';
           FLUSH PRIVILEGES;
           _EOF_
+
+      - name: Debug MySQL Variables
+        run: |
+          echo "DB_USER: ${{ secrets.DB_USER }}"
+          echo "DB_ROOT_PASSWORD length: ${#DB_ROOT_PASSWORD}"
 
       - name: Set Up MySQL Database
         run: |
           echo "Setting up MySQL database and user..."
-          sudo mysql -uroot -p"${{ secrets.DB_ROOT_PASSWORD }}" -h 127.0.0.1 <<EOF
+          sudo mysql -u ${{ secrets.DB_USER }} -p"${{ secrets.DB_ROOT_PASSWORD }}" -h 127.0.0.1 <<EOF
           CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};
           FLUSH PRIVILEGES;
           EOF
@@ -58,7 +63,7 @@ jobs:
           touch src/.env
           echo DB_Host=127.0.0.1 >> src/.env  # Use 127.0.0.1 instead of localhost
           echo DB_User=${{ secrets.DB_USER }} >> src/.env
-          echo DB_Pass=${{ secrets.DB_PASSWORD }} >> src/.env
+          echo DB_Pass=${{ secrets.DB_ROOT_PASSWORD }} >> src/.env
           echo DB_Name=${{ secrets.DB_NAME }} >> src/.env
           echo DB_Port=${{ secrets.DB_PORT || '3306' }} >> src/.env
 
