--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -25,24 +25,15 @@ jobs:
         run: |
           echo "Updating MySQL root authentication..."
           sudo mysql -u root <<_EOF_
-          ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_ROOT_PASSWORD }}';
-          FLUSH PRIVILEGES;
-          _EOF_
-
-      - name: Allow Root Login via TCP
-        run: |
-          echo "Updating MySQL root privileges..."
-          sudo mysql -u root -p"${{ secrets.DB_ROOT_PASSWORD }}" <<_EOF_
-          ALTER USER 'root'@'%' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_ROOT_PASSWORD }}';
-          GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
+          ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'rootpass';
           FLUSH PRIVILEGES;
           _EOF_
 
       - name: Configure MySQL
         run: |
           echo "Creating MySQL user and database..."
-          sudo mysql -u root -p"${{ secrets.DB_ROOT_PASSWORD }}" -h 127.0.0.1 <<EOF
-          CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'%' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';
+          sudo mysql -u root --prootpass <<EOF
+          CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'%' IDENTIFIED BY '${{ secrets.DB_ROOT_PASSWORD }}';
           CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};
           GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'%';
           FLUSH PRIVILEGES;
