--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -1,51 +1,78 @@
-name: Test CI
+name: CI - Web App Tests with MySQL
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Run CI for PRs targeting the main branch
 
 jobs:
-  mysql-test:
-    runs-on: ubuntu-latest
+  jest-test:
+    runs-on: ubuntu-latest  # Use the latest Ubuntu environment
+
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_ROOT_PASSWORD }}
+          MYSQL_DATABASE: ${{ secrets.DB_NAME }}
+          MYSQL_USER: ${{ secrets.DB_USER }}
+          MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h 127.0.0.1 --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Install MySQL
-        run: |
-          sudo apt update
-          sudo apt install -y mysql-server
-          sudo systemctl start mysql
-          sudo systemctl enable mysql
-
-      - name: Configure MySQL
-        run: |
-          sudo mysql -e "CREATE USER '${{ secrets.DB_USER }}'@'localhost' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';"
-          sudo mysql -e "CREATE DATABASE ${{ secrets.DB_NAME }};"
-          sudo systemctl restart mysql
-
-      - name: Configure Environment Variables
-        run: |
-          touch src/.env
-          echo DB_Host=${{ secrets.DB_HOST }} >> src/.env
-          echo DB_User=${{ secrets.DB_USER }} >> src/.env
-          echo DB_Pass=${{ secrets.DB_PASSWORD }} >> src/.env
-          echo DB_Name=${{ secrets.DB_NAME }} >> src/.env
-          echo DB_Port=${{ secrets.DB_PORT }} >> src/.env
-          echo APP_Port=${{ secrets.PORT }} >> src/.env
-          echo DB_SSLMode=${{ secrets.DB_SSLMODE }} >> src/.env
-
-      - name: Install Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: 'npm'
+          node-version: '20'
 
       - name: Install Dependencies
-        run: npm install
-        working-directory: src  # 👈 Run inside `src/`
+        run: |
+          cd src
+          npm install
+
+      - name: Wait for MySQL to be Ready
+        run: |
+          echo "Waiting for MySQL to be ready..."
+          for i in {1..30}; do
+            if mysqladmin ping -h 127.0.0.1 --silent; then
+              echo "MySQL is ready!"
+              break
+            fi
+            echo "Waiting for MySQL..."
+            sleep 2
+          done
+
+      - name: Debug MySQL Connection
+        run: |
+          mysql -h 127.0.0.1 -uroot -p${{ secrets.DB_ROOT_PASSWORD }} -e "SHOW DATABASES;"
+
+      - name: Initialize MySQL Database as Root
+        run: |
+          mysql -h 127.0.0.1 -uroot -p${{ secrets.DB_ROOT_PASSWORD }} <<EOF
+          CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};
+          CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'%' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';
+          GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'%';
+          ALTER USER '${{ secrets.DB_USER }}'@'%' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_PASSWORD }}';
+          FLUSH PRIVILEGES;
+          EOF
+
+      - name: Set Environment Variables for Tests
+        run: |
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> src/.env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> src/.env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> src/.env
+          echo "DB_HOST=127.0.0.1" >> src/.env
 
       - name: Run Tests
-        run: npm test
-        working-directory: src  # 👈 Run inside `src/`
+        run: |
+          cd src
+          npm test
