--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -18,9 +18,9 @@ jobs:
           MYSQL_USER: ${{ secrets.DB_USER }}
           MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
         ports:
-          - 3306:3306
+          - ${{ secrets.DB_PORT }}:${{ secrets.DB_PORT }}
         options: >-
-          --health-cmd="mysqladmin ping -h 127.0.0.1 --silent"
+          --health-cmd="mysqladmin ping -h ${{ secrets.DB_HOST }} --silent"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
@@ -43,7 +43,7 @@ jobs:
         run: |
           echo "Waiting for MySQL to be ready..."
           for i in {1..30}; do
-            if mysqladmin ping -h 127.0.0.1 --silent; then
+            if mysqladmin ping -h ${{ secrets.DB_HOST }} --silent; then
               echo "MySQL is ready!"
               break
             fi
@@ -51,13 +51,18 @@ jobs:
             sleep 2
           done
 
+      - name: Debug Secret Values
+        run: |
+          echo "DB_HOST: ${{ secrets.DB_HOST }}"
+          echo "DB_PORT: ${{ secrets.DB_PORT }}"
+
       - name: Debug MySQL Connection
         run: |
-          mysql -h 127.0.0.1 -uroot -p${{ secrets.DB_ROOT_PASSWORD }} -e "SHOW DATABASES;"
+          mysql -h ${{ secrets.DB_HOST }} -uroot -p${{ secrets.DB_ROOT_PASSWORD }} -e "SHOW DATABASES;"
 
       - name: Initialize MySQL Database as Root
         run: |
-          mysql -h 127.0.0.1 -uroot -p${{ secrets.DB_ROOT_PASSWORD }} <<EOF
+          mysql -h ${{ secrets.DB_HOST }} -uroot -p${{ secrets.DB_ROOT_PASSWORD }} <<EOF
           CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};
           CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'%' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';
           GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'%';
@@ -70,7 +75,8 @@ jobs:
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> src/.env
           echo "DB_USER=${{ secrets.DB_USER }}" >> src/.env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> src/.env
-          echo "DB_HOST=127.0.0.1" >> src/.env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> src/.env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> src/.env
 
       - name: Run Tests
         run: |
