--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -17,10 +17,11 @@ jobs:
           MYSQL_DATABASE: ${{ secrets.DB_NAME }}
           MYSQL_USER: ${{ secrets.DB_USER }}
           MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          MYSQL_HOST: ${{ secrets.DB_HOST }}
         ports:
-          - ${{ secrets.DB_PORT }}:${{ secrets.DB_PORT }}
+          - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -h ${{ secrets.DB_HOST }} --silent"
+          --health-cmd="mysqladmin ping -h 127.0.0.1 --silent"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=3
@@ -43,7 +44,7 @@ jobs:
         run: |
           echo "Waiting for MySQL to be ready..."
           for i in {1..30}; do
-            if mysqladmin ping -h ${{ secrets.DB_HOST }} --silent; then
+            if mysqladmin ping -h 127.0.0.1 --silent; then
               echo "MySQL is ready!"
               break
             fi
@@ -51,18 +52,13 @@ jobs:
             sleep 2
           done
 
-      - name: Debug Secret Values
-        run: |
-          echo "DB_HOST: ${{ secrets.DB_HOST }}"
-          echo "DB_PORT: ${{ secrets.DB_PORT }}"
-
       - name: Debug MySQL Connection
         run: |
-          mysql -h ${{ secrets.DB_HOST }} -uroot -p${{ secrets.DB_ROOT_PASSWORD }} -e "SHOW DATABASES;"
+          mysql -h 127.0.0.1 -uroot -p${{ secrets.DB_ROOT_PASSWORD }} -e "SHOW DATABASES;"
 
       - name: Initialize MySQL Database as Root
         run: |
-          mysql -h ${{ secrets.DB_HOST }} -uroot -p${{ secrets.DB_ROOT_PASSWORD }} <<EOF
+          mysql -h 127.0.0.1 -uroot -p${{ secrets.DB_ROOT_PASSWORD }} <<EOF
           CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};
           CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'%' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';
           GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'%';
@@ -76,7 +72,6 @@ jobs:
           echo "DB_USER=${{ secrets.DB_USER }}" >> src/.env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> src/.env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> src/.env
-          echo "DB_PORT=${{ secrets.DB_PORT }}" >> src/.env
 
       - name: Run Tests
         run: |
