--- a/.github/workflows/jest-test.yml
+++ b/.github/workflows/jest-test.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: ${{ secrets.DB_ROOT_PASSWORD }}
           MYSQL_DATABASE: ${{ secrets.DB_NAME }}
-          MYSQL_USER: ${{ secrets.DB_USER }}
+          MYSQL_USER: ${{ secrets.DB_USER_1 }}
           MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
           MYSQL_HOST: ${{ secrets.DB_HOST }}
         ports:
@@ -60,16 +60,16 @@ jobs:
         run: |
           mysql -h 127.0.0.1 -uroot -p${{ secrets.DB_ROOT_PASSWORD }} <<EOF
           CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};
-          CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'%' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';
-          GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'%';
-          ALTER USER '${{ secrets.DB_USER }}'@'%' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_PASSWORD }}';
+          CREATE USER IF NOT EXISTS '${{ secrets.DB_USER_1 }}'@'%' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';
+          GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER_1 }}'@'%';
+          ALTER USER '${{ secrets.DB_USER_1 }}'@'%' IDENTIFIED WITH mysql_native_password BY '${{ secrets.DB_PASSWORD }}';
           FLUSH PRIVILEGES;
           EOF
 
       - name: Set Environment Variables for Tests
         run: |
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> src/.env
-          echo "DB_USER=${{ secrets.DB_USER }}" >> src/.env
+          echo "DB_USER=${{ secrets.DB_USER_1 }}" >> src/.env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> src/.env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> src/.env
 
