--- a/.github/workflows/packer-status-check.yml
+++ b/.github/workflows/packer-status-check.yml
@@ -67,11 +67,11 @@ jobs:
           cp -r webapp.zip src/packer
         shell: bash
 
-      - name: Create GCP credentials file
-        run: |
-          cd src/packer
-          echo "${{ secrets.GCP_CREDENTIALS_FILE }}" > gcp_credentials.json
-          echo "GCP_CREDENTIALS_FILE=./gcp_credentials.json" >> $GITHUB_ENV
+      # - name: Create GCP credentials file
+      #   run: |
+      #     cd src/packer
+      #     echo "${{ secrets.GCP_CREDENTIALS_FILE }}" > gcp_credentials.json
+      #     echo "GCP_CREDENTIALS_FILE=./gcp_credentials.json" >> $GITHUB_ENV
 
       - name: Check Packer format
         working-directory: src/packer
