--- a/.github/workflows/packer-status-check.yml
+++ b/.github/workflows/packer-status-check.yml
@@ -51,6 +51,7 @@ jobs:
           packer init .
 
       - name: Packer Validate
+        working-directory: src/packer
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_INSTANCE_TYPE: ${{ secrets.AWS_INSTANCE_TYPE }}
